# TinyFaces_Tensorflow_Cpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
App/: CMakeLists.txt
App/CMakeIncludes/: FindCAF.cmake
App/include/app/: Communicator.h  FaceDetect.h  fiber_test.hpp
App/src/: Communicator.cpp  FaceDetect.cpp
Model/: weights.h5.txt.url
TensorflowModel/: CMakeLists.txt
TensorflowModel/include/tensorflow_model/: Exceptions.h  FileHandleWrapper.h  HDF5DatasetWrapper.h  ImageParser.h  ModelRunner.h  TensorPredictionHelper.h  TestOps.h  TfBlocks.h  TfH5ModelLoader.h  tf_helpers.h  tf_types_converter.h
TensorflowModel/src/: HDF5DatasetWrapper.cpp  ImageParser.cpp  ModelRunner.cpp  TestOps.cpp  TfBlocks.cpp  TfH5ModelLoader.cpp  main.cpp  tf_helpers.cpp
VideoRender/: CMakeLists.txt
VideoRender/CMakeIncludes/: FindFFMpeg.cmake
VideoRender/include/videorender/: BaseStreamDecoder.h  BaseStreamsSelector.h  CallbackTypes.h  Delayer.h  Deleters.h  Exceptions.h  MainWrapper.h  Prediction.h  RenderToDisplay.h  RenderToFile.h  Seeker.h  SignalTypes.h  SingleVideoStreamSelector.h  StreamDecodersManager.h  StreamVideoDecoder.h  StreamsSelectionHelper.h  VideoDecoder.h  VideoRender.h  VideoRenderImpl.h  ffmpeg.h
VideoRender/src/: BaseStreamDecoder.cpp  BaseStreamsSelector.cpp  Delayer.cpp  Exceptions.cpp  MainWrapper.cpp  RenderToDisplay.cpp  RenderToFile.cpp  Seeker.cpp  SignalTypes.cpp  SingleVideoStreamSelector.cpp  StreamDecodersManager.cpp  StreamSelectionHelper.cpp  StreamVideoDecoder.cpp  VideoDecoder.cpp  VideoRender.cpp  VideoRenderImpl.cpp  run_me.cpp
python/: WeightSerializer.py  tiny_face_eval.py  tiny_face_model.py
